--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Contact Me</h1>
+
+    <form name="contact" method="POST" data-netlify="true">
     <header>
         <nav>
             <ul>
